--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html {
@@ -41,6 +42,8 @@ a {
 @media (hover: hover) {
   a:hover {
     color: $main-color;
+    animation: pulse;
+    animation-duration: 2s;
   }
 }
 
