--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -54,6 +54,12 @@
       position: relative;
       font-size: 1.5rem;
 
+      &:hover {
+        animation: pulse;
+        animation-duration: 2s;
+        transition: all ease;
+      }
+
       &::after {
         content: "";
         position: absolute;
@@ -61,7 +67,7 @@
         left: 50%;
         transform: translateX(-50%);
         width: 0;
-        transition: width 0.5s ease;
+        transition: all 0.5s ease;
         height: 2px;
         background-color: $main-color;
       }
