--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,7 +1,7 @@
 @use "../../scss/" as *;
 
 .logo {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 600;
 
   @include flex(center, unset);
@@ -25,7 +25,11 @@
   width: 100%;
   z-index: 99;
   transition: height 0.3s ease, background-color 0.3s ease;
-
+  background: linear-gradient(
+    to bottom,
+    rgba(34, 35, 35, 1),
+    rgba(243, 238, 241, 0)
+  );
   &.shrink {
     height: $header-shrink-height;
     background-color: $body-bg;
