--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -11,14 +11,19 @@
   opacity: 0;
   visibility: hidden;
   background-color: rgba($color: black, $alpha: 0.4);
+  transition: all 0.5s ease;
+  animation: zoomOut;
+  animation-duration: 0.5s;
 
   &.active {
     opacity: 1;
     visibility: visible;
+    animation: zoomInDown;
+    animation-duration: 0.5s;
   }
 
   &__content {
-    padding: 2rem;
+    padding: 1.8rem;
     background-color: $body-bg;
     width: 50%;
     opacity: 0;
@@ -31,8 +36,8 @@
 
     &__close {
       position: absolute;
-      right: 5px;
-      top: 5px;
+      right: 8px;
+      top: 0px;
       font-size: 1.5rem;
       cursor: pointer;
 
