--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -29,7 +29,7 @@
     opacity: 0;
     z-index: 10;
     border-radius: 10px;
-    padding: 8rem 1rem 1rem 1rem;
+    padding: 70% 1rem 1rem 1rem;
     animation: fadeOutDown 0.5s;
     transition: all 0.3s ease;
 
