--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -20,6 +20,7 @@
       justify-content: space-between;
 
       @include mobile {
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
       }
     }
