--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -30,7 +30,7 @@
     z-index: 10;
     border-radius: 10px;
     padding: 70% 1rem 1rem 1rem;
-    animation: fadeOutDown 0.5s;
+    animation: zoomOut 0.5s;
     transition: all 0.3s ease;
 
     .btn {
@@ -58,7 +58,6 @@
       .btn {
         opacity: 1;
         animation: fadeInUp;
-        animation-duration: 1s;
         animation-duration: 1s;
       }
     }
