--- a/src/components/movieGrid/MovieGrid.scss
+++ b/src/components/movieGrid/MovieGrid.scss
@@ -11,4 +11,9 @@
   @include tablet {
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   }
+
+  &__loadMore {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
 }
