--- a/src/components/inputSearchBar/InputSearchBar.scss
+++ b/src/components/inputSearchBar/InputSearchBar.scss
@@ -3,22 +3,27 @@
 .input_holder {
   display: flex;
   justify-content: flex-end;
+  border-radius: $border-radius;
+  background-color: rgb(18, 18, 18);
+  padding: 0.2rem;
+  max-width: 30%;
+  margin-left: auto;
 }
 
 input {
-  background-color: rgb(58, 53, 53);
-  padding: 0.5rem 1.5rem;
+  padding: 0 0.5rem;
   font-size: 1rem;
-  border-radius: $border-radius;
   color: $text-color;
   font-family: $font-family;
   margin-right: 0.5rem;
-  opacity: 0.5;
+  opacity: 1;
   transition: all ease 0.3s;
   border: none;
-  width: 300px;
+  flex: 1;
+  background-color: transparent;
+  opacity: 1;
 }
 
 input:focus {
-  opacity: 1;
+  opacity: 0.7;
 }
