--- a/src/components/videoLists/VideoLists.scss
+++ b/src/components/videoLists/VideoLists.scss
@@ -1,7 +1,7 @@
 .video {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 0.5rem 2rem;
   max-width: 60%;
   flex-shrink: 0;
   align-items: center;
@@ -9,4 +9,27 @@
   align-content: center;
   margin-left: auto;
   margin-right: auto;
+  border: none;
+  margin-bottom: 10px;
+  &:hover {
+    border: 1px solid red;
+    border-radius: 5px;
+  }
+  transition: all 0.3s ease;
+
+  &:hover > .video__title {
+    color: red;
+  }
+
+  &:hover > hr {
+    width: 100%;
+  }
+}
+
+hr {
+  border: 1px solid red;
+  content: "";
+  width: 5%;
+  transition: all 0.3s ease;
+  margin-bottom: 10px;
 }
