--- a/src/components/castDetails/CastDetails.scss
+++ b/src/components/castDetails/CastDetails.scss
@@ -40,6 +40,9 @@
     display: none;
     flex-direction: column;
     margin-left: 10px;
+    align-self: stretch;
+    justify-content: space-between;
+    padding: 20px 0;
   }
 
   &__name {
